--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/secondary-menu/component/_secondary-menu.scss
@@ -14,6 +14,14 @@
   .block-alshaya-secondary-main-menu {
     z-index: 4;
     margin: 0.9375rem 0 1.125rem;
+
+    @include breakpoint($desktop) {
+      margin-bottom: -0.125rem;
+
+      html[lang=ar] & {
+        margin-bottom: -0.675rem;
+      }
+    }
   }
 
   @include breakpoint($desktop) {
